Fix wrong color for many PHP functions

--- a/styles/languages/php.less
+++ b/styles/languages/php.less
@@ -14,13 +14,6 @@
     color: @navy;
   }
 
-  .syntax--support.syntax--function.syntax--network.syntax--php,
-  .syntax--support.syntax--function.syntax--var.syntax--php,
-  .syntax--support.syntax--function.syntax--array.syntax--php {
-    color: black;
-    font-weight: normal;
-  }
-
   // Change punctuation color ([; etc
   .syntax--source.syntax--php{
      color: @purple;
